# ai-os-rpi

./: .gitignore  Cargo.toml  Cross.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
base-image/: build-image.sh  build.sh  packages.list  wayfire.ini
config/: config.toml
crates/ai-daemon/: Cargo.toml
crates/ai-daemon/src/: budget_manager.rs  claude_client.rs  main.rs  task_router.rs  tool_engine.rs
crates/ai-daemon/src/memory/: history.rs  mod.rs  profile.rs  session.rs
crates/ai-shell/: Cargo.toml  build.rs
crates/ai-shell/src/: ai_bar.rs  config.rs  daemon_config.rs  icon_cache.rs  main.rs  menubar.rs  onboarding.rs  panel.rs  theme.rs  wallpaper.rs
crates/ai-shell/src/components/: mod.rs
crates/ai-shell/src/settings/: mod.rs
crates/blog-publisher/: Cargo.toml
crates/blog-publisher/src/: ghost.rs  lib.rs  wordpress.rs
crates/common/: Cargo.toml
crates/common/src/: ipc.rs  types.rs
scripts/: ai-os-update.sh
systemd/: ai-daemon.service  ai-os-update.service  ai-os-update.timer
