[workspace]
members = [
    "crates/common",
    "crates/ai-daemon",
    "crates/ai-shell",
    "crates/blog-publisher",
]
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
tokio              = { version = "1",    features = ["full"] }
serde              = { version = "1",    features = ["derive"] }
serde_json         = "1"
toml               = "0.8"
reqwest            = { version = "0.12", features = ["json", "rustls-tls"] }
rusqlite           = { version = "0.31", features = ["bundled"] }
egui               = "0.29"
eframe             = { version = "0.29" }
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = "0.3"
chrono             = { version = "0.4",  features = ["serde"] }
uuid               = { version = "1",    features = ["v4", "serde"] }
