[package]
name    = "ai-daemon"
version.workspace = true
edition = "2021"

[[bin]]
name = "ai-daemon"
path = "src/main.rs"

[dependencies]
common             = { path = "../common" }
blog-publisher     = { path = "../blog-publisher" }
tokio              = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
toml               = { workspace = true }
reqwest            = { workspace = true }
rusqlite           = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
chrono             = { workspace = true }
uuid               = { workspace = true }
dirs-next          = "2"
shellexpand        = "3"
